<resources>
    <string name="app_name">八爪鱼</string>
    <string name="upgrade_info_normal">有新的版本更新,是否下载?</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="check_upgrade_failed">更新失败</string>
    <string name="upgrade_info_no_new_version">已经是最新版本</string>
    <string name="session_expired">Session过期,请重新登录</string>
    <string name="network_not_normal">网络不给力</string>
    <string name="http_server_error">无法连接到服务器,请稍后再试</string>
    <string name="activity_my_task_title">我的任务</string>
    <string name="activity_login_label_account">账号</string>
    <string name="activity_login_hint_account">请输入账号</string>
    <string name="activity_login_label_password">密码</string>
    <string name="activity_login_btn_submit">登录</string>
    <string name="activity_login_hint_password">请输入密码</string>
    <string name="activity_login_input_error">账号和密码不能为空</string>
    <string name="activity_home_licence">由智谷网络科技有限公司技术支持\n联系电话:0535-2106785</string>
    <string name="activity_home_menu_my_task">我的任务</string>
    <string name="activity_home_menu_report_info">上报信息</string>
    <string name="activity_home_menu_report_question">上报问题</string>
    <string name="activity_home_menu_my_report">我的上报</string>
    <string name="activity_home_menu_profile">个人中心</string>
    <string name="activity_profile_menu_account">账号与安全</string>
    <string name="activity_profile_menu_about">关于我们</string>
    <string name="activity_profile_btn_log_out">退出登录</string>
    <string name="activity_profile_title">个人中心</string>
    <string name="activity_profile_name">您好:%s</string>
    <string name="activity_profile_account">账号:%s</string>
    <string name="activity_account_title">账号与安全</string>
    <string name="activity_my_report_title">我的上报</string>
    <string name="refresh_load_more">加载更多</string>
    <string name="activity_activity_my_report_dial">联系总部</string>
    <string name="activity_activity_my_location">定位</string>
    <string name="delete">删除</string>
    <string name="fragment_task_list_item_finish">完成任务</string>
    <string name="activity_map_title">定位</string>
    <string name="submit">提交</string>
    <string name="activity_perform_report_map_title_info">上报信息</string>
    <string name="activity_perform_report_map_title_question">上报问题</string>
    <string name="btn_un_treat_position">待办问题位置</string>
    <string name="activity_report_question_title">上报问题</string>
    <string name="send">发送</string>
    <string name="image_display_view_count">已选择%1$d张图片,共%2$d张图片</string>
    <string name="activity_report_question_label_coordinate">坐标</string>
    <string name="activity_report_question_label_desc">发现的问题和意见</string>
    <string name="activity_report_question_label_img">图片(最多六张)</string>
    <string name="activity_report_question_label_level">上报等级</string>
    <string name="activity_report_question_label_name">名称</string>
    <string name="activity_report_info_label_name">名称</string>
    <string name="activity_report_info_label_desc">描述</string>
    <string name="activity_report_info_label_layer">图层</string>
    <string name="activity_report_info_title">上报信息</string>
    <string name="activity_report_info_hint_name">(说明,并标记号码如:XX街道排水井#1)</string>
    <string name="select_choose">请选择</string>
    <string name="activity_report_info_layer_none">没有图层属性</string>
    <string name="report_success">上报成功</string>
    <string name="info_choose_layer">请选择图层</string>
    <string name="info_committing">提交中</string>
    <string name="delete_success">删除成功</string>
    <string name="activity_report_question_empty_question">问题不能为空</string>
    <string name="commit_report_success">上报成功</string>
    <string name="activity_account_label_avatar">头像</string>
    <string name="btn_commit">提交</string>
    <string name="activity_account_label_name">姓名</string>
    <string name="activity_account_label_account">账号</string>
    <string name="activity_account_label_phone">手机号</string>
    <string name="activity_account_label_good">工作擅长</string>
    <string name="activity_about_title">关于我们</string>
    <string name="activity_about_label_feedback">问题反馈</string>
    <string name="activity_about_label_check_upgrade">检查更新</string>
    <string name="activity_report_commit_title">上报完成情况</string>
    <string name="activity_report_commit_label_desc">完成情况</string>
    <string name="activity_report_commit_label_shortcut">快捷输入</string>
    <string name="activity_report_commit_desc_hint">请详细描述你的完成进度...</string>
    <string name="activity_report_commit_info_desc_null">请填写完成情况</string>
    <string name="upload_img_failed">上传图片失败</string>
    <string name="activity_feedback_title">问题反馈</string>
    <string name="activity_feedback_label_desc">问题和意见</string>
    <string name="activity_feedback_label_desc_hint">请详细描述你的问题和意见</string>
    <string name="activity_feedback_label_qq">QQ/邮箱</string>
    <string name="activity_feedback_label_contact_hint">(选填,方便我们和你联系)</string>
    <string name="activity_feedback_label_score">应用评分</string>
    <string name="save_user_success">保存用户成功</string>
    <string name="activity_feedback_success">反馈成功</string>
    <string name="activity_feedback_desc_null">请填写问题和意见</string>
</resources>
