<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <android.support.v7.widget.Toolbar
      android:id="@+id/titleBar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@color/bg_title_bar"
      app:navigationIcon="@mipmap/icon_arrow_left"
      app:title="@string/activity_report_commit_title"
      app:titleTextColor="@android:color/white"
      >
    <TextView
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:padding="@dimen/margin_medium"
        android:text="@string/submit"
        style="@style/Widget.App.TextView.Large.White"
        />
  </android.support.v7.widget.Toolbar>
  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_medium"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/activity_report_commit_label_desc"
        style="@style/Widget.App.TextView.Medium.Secondary"
        />

    <!--<TextView-->
        <!--android:id="@+id/spinner"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:drawablePadding="@dimen/margin_medium"-->
        <!--android:drawableRight="@mipmap/icon_arrow_down"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/activity_report_commit_label_shortcut"-->
        <!--style="@style/Widget.App.TextView.Medium.Secondary"-->
        <!--/>-->
  </RelativeLayout>
  <EditText
      android:id="@+id/desc_value"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      android:background="@android:color/background_light"
      android:gravity="top|left"
      android:hint="@string/activity_report_commit_desc_hint"
      android:maxLength="@integer/max_desc_length"
      android:padding="@dimen/margin_small"
      android:textColorHint="@color/font_color_hint"
      style="@style/Widget.App.TextView.Large.Primary"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_medium"
      android:text="@string/activity_report_question_label_img"
      style="@style/Widget.App.TextView.Medium.Secondary"
      />

  <com.demon.huitu.ui.imagepick.ImageDisplayView
      android:id="@+id/img_display_view"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      />
</LinearLayout>