<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/background_light"
    app:cardCornerRadius="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/snapshot"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        >
      <TextView
          android:id="@+id/time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          tools:text="时间：4月27 2017"
          style="@style/Widget.App.TextView.Medium.Secondary"
          />

      <TextView
          android:id="@+id/state"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          tools:text="未处理"
          style="@style/Widget.App.TextView.Medium.Primary"
          />
    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        tools:text="这里是描述"
        style="@style/Widget.App.TextView.Medium.Primary"
        />

    <TextView
        android:id="@+id/dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:drawableLeft="@mipmap/icon_phone"
        android:drawablePadding="@dimen/margin_smallest"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:text="@string/activity_activity_my_report_dial"
        style="@style/Widget.App.TextView.Medium.Blue"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/bg_color_divider"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:id="@+id/location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:drawableLeft="@mipmap/icon_location_item"
          android:drawablePadding="@dimen/margin_small"
          android:padding="@dimen/margin_medium"
          android:text="@string/activity_activity_my_location"
          style="@style/Widget.App.TextView.Medium.Blue"
          />

      <TextView
          android:id="@+id/finish"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:padding="@dimen/margin_medium"
          android:text="@string/fragment_task_list_item_finish"
          style="@style/Widget.App.TextView.Medium.Blue"
          />

    </RelativeLayout>

  </LinearLayout>

</android.support.v7.widget.CardView>